--- a/betterdiscord/comfy.theme.css
+++ b/betterdiscord/comfy.theme.css
@@ -158,7 +158,7 @@
 }
 
 .theme-light {
-  --background-primary: #23283d;
+  --background-primary: #E9E7B5;
   --background-secondary: #1e2233;
   --background-secondary-alt: #191f2e;
   --background-tertiary: #101320;
