--- a/betterdiscord/comfy.theme.css
+++ b/betterdiscord/comfy.theme.css
@@ -159,7 +159,7 @@
 
 .theme-light {
   --background-primary: #E9E7B5;
-  --background-secondary: #BCBE33;
+  --background-secondary: #E7D795;
   --background-secondary-alt: #191f2e;
   --background-tertiary: #101320;
   --background-accent: #7289da;
