--- a/betterdiscord/comfy.theme.css
+++ b/betterdiscord/comfy.theme.css
@@ -133,15 +133,15 @@
 
 .theme-dark {
   --background-primary: #E9E7B5;
-  --background-secondary: #BCBE33;
-  --background-secondary-alt: #B8A528;
+  --background-secondary: #E7D795;
+  --background-secondary-alt: #E7C295;
   --background-tertiary: #CBD16E;
   --background-accent: #E9BE2A;
 
   --modal-background: #E9E7B5;
   --background-mobile-primary: #E9E7B5;
-  --background-mobile-secondary: #BCBE33;
-  --channeltextarea-background: #B8A528;
+  --background-mobile-secondary: #E7D795;
+  --channeltextarea-background: #E7C295;
   --background-message-hover: transparent;
   --background-modifier-hover: #00000010;
   --background-modifier-active: #0000001a;
@@ -160,7 +160,7 @@
 .theme-light {
   --background-primary: #E9E7B5;
   --background-secondary: #E7D795;
-  --background-secondary-alt: #191f2e;
+  --background-secondary-alt: #E7C295;
   --background-tertiary: #101320;
   --background-accent: #7289da;
   --background-modifier-hover: #262b41;
