--- a/betterdiscord/comfy.theme.css
+++ b/betterdiscord/comfy.theme.css
@@ -44,7 +44,7 @@
   --user-buttons-spacing: 8px;
 
   /* Color - Default value : #096DC0 */
-  --user-buttons-color: #f8b255;
+  --user-buttons-color: #FBCF95;
 
   /* ═══════『 ⭕ Roundness settings 』═══════
 *
